feat: Integrate CodeMirror for enhanced code editing
Adds CodeMirror and its associated language extensions to the project. This provides a more robust and feature-rich code editing experience within the application.

Also includes minor updates to metadata and imports for the Whiteboard component.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -51,7 +52,21 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
+    "codemirror": "https://esm.sh/codemirror@6.0.1",
+    "@codemirror/view": "https://esm.sh/@codemirror/view@6.0.0",
+    "@codemirror/state": "https://esm.sh/@codemirror/state@6.0.0",
+    "@codemirror/language": "https://esm.sh/@codemirror/language@6.0.0",
+    "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.0.0",
+    "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.0.0",
+    "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.0.0",
+    "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.0.0",
+    "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.0.0",
+    "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.0.0",
+    "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.0.0",
+    "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.0",
+    "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.0.0",
+    "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.0"
   }
 }
 </script>
