--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Essential environment shims for high-performance SDKs -->
     <script>
       window.global = window;
-      window.process = { 
+      window.process = window.process || { 
         env: { 
           NODE_ENV: 'production',
           API_KEY: '' 
@@ -31,7 +31,7 @@
       window.addEventListener('error', function(event) {
         if (event.message === "Script error." || (!event.error && event.message === "")) {
           console.group('%c 🚀 Critical Module Failure', 'color: #ff4d4d; font-weight: bold;');
-          console.error('A module script failed to load or resolve.');
+          console.error('A module script failed to load or resolve. Check importmap and network headers.');
           console.groupEnd();
           return;
         }
@@ -79,6 +79,7 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?deps=react@19.0.0",
+    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0",
     "recharts": "https://esm.sh/recharts@2.13.3?deps=react@19.0.0,react-dom@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
