--- a/index.html
+++ b/index.html
@@ -30,17 +30,25 @@
       // Enhanced Global Error Diagnostics
       window.addEventListener('error', function(event) {
         const root = document.getElementById('root');
-        if (root && root.innerHTML === '') {
+        // Only show if the app hasn't rendered yet (catch boot errors)
+        if (root && (root.innerHTML === '' || root.children.length === 0)) {
           root.innerHTML = `
-            <div style="padding: 2rem; font-family: sans-serif; color: #ff4d4d; background: #fff; height: 100vh;">
-              <h1 style="margin: 0 0 1rem 0;">Critical Load Error</h1>
-              <p>The application failed to start. This is usually due to a module resolution error or a top-level runtime exception.</p>
-              <pre style="background: #f5f5f5; padding: 1rem; border-radius: 8px; overflow: auto;">${event.message || 'Unknown Error'}\n${event.filename || ''}:${event.lineno || ''}</pre>
-              <button onclick="location.reload()" style="margin-top: 1rem; padding: 0.5rem 1rem; cursor: pointer;">Retry Load</button>
+            <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; color: #1d1d1f; background: #f5f5f7; padding: 20px; text-align: center;">
+              <div style="background: white; padding: 40px; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.05); max-width: 500px; width: 100%;">
+                <div style="width: 60px; height: 60px; background: #ff3b30; border-radius: 18px; display: flex; align-items: center; justify-content: center; margin: 0 auto 24px;">
+                  <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line></svg>
+                </div>
+                <h1 style="font-size: 24px; font-weight: 700; margin-bottom: 12px; letter-spacing: -0.02em;">Unable to Start Ecosystem</h1>
+                <p style="color: #86868b; font-size: 15px; line-height: 1.5; margin-bottom: 24px;">A critical module failed to load. This may be due to a connection error or a configuration issue.</p>
+                <div style="background: #fdf2f2; border: 1px solid #fee2e2; padding: 12px; border-radius: 12px; margin-bottom: 24px; text-align: left;">
+                  <p style="font-family: monospace; font-size: 12px; color: #b91c1c; margin: 0; word-break: break-all;">${event.message || 'Unknown Runtime Error'}</p>
+                </div>
+                <button onclick="location.reload()" style="background: #0071e3; color: white; border: none; padding: 12px 32px; border-radius: 980px; font-weight: 600; font-size: 15px; cursor: pointer; transition: all 0.2s ease;">Retry Connection</button>
+              </div>
             </div>
           `;
         }
-        console.error('Runtime Exception:', event.error || event.message);
+        console.error('Boot Error:', event.error || event.message);
       }, true);
     </script>
     <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
