--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1?deps=codemirror@6.0.1",
     "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1?deps=codemirror@6.0.1",
     "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1?deps=codemirror@6.0.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
