--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Projects Connect</title>
-    <!-- Essential environment shims for high-performance SDKs -->
+    <!-- Essential environment shims -->
     <script>
       window.global = window;
       window.process = window.process || { 
-        env: { 
-          NODE_ENV: 'production',
-          API_KEY: '' 
-        },
+        env: { NODE_ENV: 'production', API_KEY: '' },
         cwd: () => '/',
         browser: true,
         nextTick: (cb) => setTimeout(cb, 0),
@@ -20,25 +17,17 @@
         versions: {},
         platform: 'browser',
         stdout: { write: () => {} },
-        stderr: { write: () => {} },
-        on: () => {},
-        once: () => {},
-        emit: () => {},
-        removeListener: () => {}
+        stderr: { write: () => {} }
       };
       
-      // Enhanced Global Error Diagnostics
       window.addEventListener('error', function(event) {
         const root = document.getElementById('root');
         if (root && (root.innerHTML === '' || root.children.length === 0)) {
           root.innerHTML = `
-            <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; font-family: -apple-system, sans-serif; background: #f5f5f7; padding: 20px; text-align: center;">
-              <div style="background: white; padding: 40px; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.05); max-width: 500px; width: 100%;">
-                <h1 style="font-size: 24px; font-weight: 700; margin-bottom: 12px;">System Boot Failure</h1>
-                <p style="color: #86868b; font-size: 15px; margin-bottom: 24px;">Failed to initialize modules. Please refresh or reset.</p>
-                <div style="background: #fdf2f2; border: 1px solid #fee2e2; padding: 12px; border-radius: 12px; margin-bottom: 24px; text-align: left;">
-                  <p style="font-family: monospace; font-size: 12px; color: #b91c1c; margin: 0;">${event.message}</p>
-                </div>
+            <div style="display: flex; align-items: center; justify-content: center; height: 100vh; font-family: sans-serif; background: #f5f5f7;">
+              <div style="background: white; padding: 40px; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.05); text-align: center;">
+                <h1 style="font-size: 24px; margin-bottom: 12px;">Boot Failure</h1>
+                <p style="color: #666; margin-bottom: 24px;">Check console for resolution errors.</p>
                 <button onclick="location.reload()" style="background: #0071e3; color: white; border: none; padding: 12px 24px; border-radius: 980px; font-weight: 600; cursor: pointer;">Retry</button>
               </div>
             </div>
@@ -52,20 +41,14 @@
       tailwind.config = {
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
-            },
-            colors: {
-              apple: { gray: '#F5F5F7', blue: '#0071E3', text: '#1D1D1F', border: '#D2D2D7' }
-            }
+            fontFamily: { sans: ['Inter', 'sans-serif'], mono: ['JetBrains Mono', 'monospace'] },
+            colors: { apple: { gray: '#F5F5F7', blue: '#0071E3', text: '#1D1D1F', border: '#D2D2D7' } }
           }
         }
       }
     </script>
     <style>
       ::-webkit-scrollbar { width: 8px; height: 8px; }
-      ::-webkit-scrollbar-track { background: transparent; }
       ::-webkit-scrollbar-thumb { background: #d1d1d6; border-radius: 10px; }
       body { -webkit-font-smoothing: antialiased; margin: 0; background: #F5F5F7; overflow: hidden; }
     </style>
@@ -80,22 +63,22 @@
     "recharts": "https://esm.sh/recharts@2.13.3?deps=react@19.0.0,react-dom@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.46.1",
-    "react/": "https://esm.sh/react@^19.2.3/",
+    "codemirror": "https://esm.sh/codemirror@6.0.1",
+    "@codemirror/view": "https://esm.sh/@codemirror/view@6.34.1",
+    "@codemirror/state": "https://esm.sh/@codemirror/state@6.4.1",
+    "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.7.1",
+    "@codemirror/search": "https://esm.sh/@codemirror/search@6.5.6",
+    "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.1.2",
+    "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.2.2",
+    "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.1.6",
+    "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.4.9",
+    "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.3.0",
+    "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1",
+    "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.8.0",
+    "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1",
+    "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@^6.0.2",
-    "@codemirror/view": "https://esm.sh/@codemirror/view@^6.39.4",
-    "codemirror": "https://esm.sh/codemirror@^6.0.2",
-    "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@^6.4.11",
-    "@codemirror/state": "https://esm.sh/@codemirror/state@^6.5.2",
-    "@codemirror/search": "https://esm.sh/@codemirror/search@^6.5.11",
-    "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@^6.1.3",
-    "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@^6.3.1",
-    "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@^6.5.0",
-    "@codemirror/commands": "https://esm.sh/@codemirror/commands@^6.10.1",
-    "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@^6.10.0",
-    "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@^6.2.1",
-    "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@^6.0.2",
-    "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@^6.2.4"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
