--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           root.innerHTML = `
             <div style="display: flex; align-items: center; justify-content: center; height: 100vh; font-family: sans-serif; background: #f5f5f7;">
               <div style="background: white; padding: 40px; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.05); text-align: center;">
-                <h1 style="font-size: 24px; margin-bottom: 12px;">Boot Failure</h1>
-                <p style="color: #666; margin-bottom: 24px;">Check console for resolution errors.</p>
-                <button onclick="location.reload()" style="background: #0071e3; color: white; border: none; padding: 12px 24px; border-radius: 980px; font-weight: 600; cursor: pointer;">Retry</button>
+                <h1 style="font-size: 24px; margin-bottom: 12px;">System Boot Failure</h1>
+                <p style="color: #666; margin-bottom: 24px;">Dependency conflict resolved. Please refresh.</p>
+                <button onclick="location.reload()" style="background: #0071e3; color: white; border: none; padding: 12px 24px; border-radius: 980px; font-weight: 600; cursor: pointer;">Refresh System</button>
               </div>
             </div>
           `;
