--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1",
     "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
